# skew

./: .gitignore  Cargo.toml  README.md  llms.txt
src/: config.rs  daemon.rs  focus.rs  hotkeys.rs  ipc.rs  layout.rs  lib.rs  main.rs  plugins.rs  snap.rs  window_manager.rs
src/macos/: accessibility.rs  cgwindow.rs  mod.rs  window_notifications.rs  window_system.rs
